# checkpoint-ai

./: Dockerfile  INTEGRATIONS.md  INTEROP.md  README.md  ROADMAP.md  install.ps1  install.sh  layman.md  pyproject.toml
.github/workflows/: ci.yml
checkpoint_ai/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py
demos/: self-assessment.json
demos/01-basic/: SCENARIO.md  assessment.json
demos/01-pre-launch-gap-analysis/: SCENARIO.md  self-assessment.json
demos/02-iso-42001-readiness/: SCENARIO.md  self-assessment.json
demos/03-eu-ai-act-high-risk/: SCENARIO.md  self-assessment.json
demos/04-prohibited-practice-stop/: SCENARIO.md  self-assessment.json
demos/05-medical-device-high-risk/: SCENARIO.md  self-assessment.json
demos/06-internal-analytics-minimal/: SCENARIO.md  self-assessment.json
demos/07-greenfield-baseline/: SCENARIO.md  self-assessment.json
demos/08-na-scoping/: SCENARIO.md  self-assessment.json
demos/09-ci-sarif-gate/: SCENARIO.md  self-assessment.json
demos/10-vendor-model-intake/: SCENARIO.md  self-assessment.json
deploy/: docker-compose.yml  k8s.yaml
deploy/terraform/: main.tf
docs/: ADVANCED.md  ARCHITECTURE.md  DEPLOY.md  INSTALL.md
examples/: catalog.txt  help.txt  version.txt
integrations/: webhook.py
ports/: README.md
ports/go/: go.mod  main.go
ports/javascript/: index.js  package.json
ports/rust/: Cargo.toml
ports/rust/src/: main.rs
tests/: test_connect.py  test_demos.py  test_export.py  test_hardening.py  test_smoke.py
