[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-checkpoint-ai"
version = "0.1.1"
description = "NIST AI RMF / EU AI Act / ISO 42001 self-assessment & SSP generator"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["federal", "cognis-digital", "cognis-neural-suite", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
mcp = ["mcp>=1.0"]
web = ["fastapi>=0.110", "uvicorn>=0.27"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/checkpoint-ai"

[project.scripts]
"checkpoint-ai-emit" = "checkpoint_ai.connect:emit_main"
checkpoint-ai = "checkpoint_ai.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["checkpoint_ai"]
